--- a/blocks/corporatepolicies/corporatepolicies.css
+++ b/blocks/corporatepolicies/corporatepolicies.css
@@ -98,7 +98,7 @@
 
 @media (width <= 992px) {
     .corporatepolicies-wrapper{
-        margin: 56px 0;
+        margin: 45px 0;
     }
 
     .corporate-policies-list-item {
